--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,31 @@
-body{
-    background-color: white
+/*
+ * File: app.component.css
+ * Authors: Hegedus Gyorgy
+ * Copyright: 2022, Hegedus Gyorgy
+ * Group: Szoft II/N
+ * Date: 2022-01-13
+ * Github: https://github.com/Gyuri21
+ * Licenc: GNU GPL
+ */
+.container{
+    background:#696969;;
+
 }
 h1{
     text-align: center;
+    font-weight: bold;
+    font-family: sans-serif;
+    color: white;
+
+}
+label{
+    font-weight: bold;
+    color: white;
+}
+button{
+    font-weight: bold;
+    margin: 3;
+}
+input{
+    border: solid red 2px;
 }
