--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,12 @@
+<!--
+ * File: app.component.html
+ * Authors: Hegedus Gyorgy
+ * Copyright: 2022, Hegedus Gyorgy
+ * Group: Szoft II/N
+ * Date: 2022-01-13
+ * Github: https://github.com/Gyuri21
+ * Licenc: GNU GPL
+ -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <body>
   
@@ -7,21 +16,20 @@
   <h1>Hegedűs György 2022.01.13
   <h1>SzoftII/N</h1>
   </h1>
-
-  <label class = "form-label" for = "weight">Testtömeg: </label>
-  <input  class = "form-control" type="text" id="weight"
-  [(ngModel)]="weight"><br>
-  
-  <label class = "form-label" for = "height">Magasság: </label>
-  <input class = "form-control" type="text" id="height"
-  [(ngModel)]="height"><br>
-  
-  <button class="btn btn-danger" (click)= "calcIndex()">Számít</button><br>
-  
-  <label class ="form-label">Testömegindex: </label>
-  <input  class = "form-control"type="text"
-  disabled
-  [(ngModel)]="index"><br>
-</div>
+    <label class = "form-label" for = "weight">Testtömeg: </label>
+    <input  class = "form-control" type="text" id="weight"
+    [(ngModel)]="weight"><br>
+    
+    <label class = "form-label" for = "height">Magasság: </label>
+    <input class = "form-control" type="text" id="height"
+    [(ngModel)]="height"><br>
+    
+    <button class="btn btn-danger" (click)= "calcIndex()">Számít</button><br>
+    
+    <label class ="form-label">Testtömegindex: </label>
+    <input  class = "form-control"type="text"
+    disabled
+    [(ngModel)]="index"><br>
+  </div>
 
 </body>
